--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # loadflow
-### _Angelo Rossi <angelo.rossi.homelab@gmail.com>_
+##########
 
 This is a very basic and simple powerflow calculating program.
 As example look at test cases in data/*.dat
@@ -15,7 +15,9 @@ CL-USER> (lf::loadflow :problem-file-pathname #p"loadflow/data/test-problem-13.d
    :SOLVER-TYPE :NEWTON-RAPHSON-POLAR
    :MAXIMUM-ITERATIONS-COUNT 400
    :EPSILON-POWER #C(10.0d0 10.0d0)
-   :ALPHA #m(0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0)
+   :ALPHA #m(0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0
+             0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0
+             0.290000000000000d0 0.290000000000000d0 0.290000000000000d0 0.290000000000000d0)
    :FREQUENCY 50.0d0
    :AUTHOR "Angelo Rossi"
    :DATE 3802933200
@@ -231,6 +233,22 @@ CL-USER> (lf::loadflow :problem-file-pathname #p"loadflow/data/test-problem-13.d
 The program returns this structure containing the problem plus results
 on successfully computations or nil if there's no solution.
 
-## GPLv3
+## License
+##########
 
-GNU Public Licens Version 3.
+Copyright (c) 2020-2022 Angelo Rossi <angelo.rossi.homelab@gmail.com>
+
+This file is part of Loadflow (LF).
+
+   Loadflow (LF) is free software: you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation, either version 3 of the License, or
+   (at your option) any later version.
+
+   Loadflow (LF) is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with Loadflow (LF).  If not, see <http://www.gnu.org/licenses/>.
